fix: added gap in cart btn

--- a/pages/productList/productList.css
+++ b/pages/productList/productList.css
@@ -61,6 +61,7 @@
 
 .card-badge {
   left: 5%;
+  background-color: var(--primary-color);
 }
 
 .like-btn {
